fix z-index of ui dialog so public theme menu doesnt bleed through. #7799

--- a/openscholar/themes/os_basetheme/css/global.pages.css
+++ b/openscholar/themes/os_basetheme/css/global.pages.css
@@ -856,6 +856,9 @@ div[id^=event-popover] .event-title a {
 .ui-widget-header {
     background: none !important;
 }
+.ui-dialog.ui-front {
+    z-index: 101;
+}
 /** OS LOGIN CONTAINER STYLES **/
 /** SLIDER **/
 
